[gd_scene load_steps=3 format=3 uid="uid://dxvc5gry51wxq"]

[ext_resource type="Script" uid="uid://dvvlcehf8ykx7" path="res://scripts/bank.gd" id="1_070a6"]
[ext_resource type="Texture2D" uid="uid://vcohqkjwjaaf" path="res://assets/profil/or.webp" id="2_v0kt3"]

[node name="Bank" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_070a6")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.8291994, 0.22925165, 0.4097061, 1)
layout_mode = 0
offset_left = 249.0
offset_top = 69.0
offset_right = 851.0
offset_bottom = 567.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 249.0
offset_top = 92.0
offset_right = 852.0
offset_bottom = 506.0
theme_override_constants/separation = 40

[node name="Titre" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 75
text = "Banque"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 50
text = "Vie"

[node name="moins" type="Button" parent="VBoxContainer/HBoxContainer"]
modulate = Color(3.1229057, 3.1229057, 3.1229057, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "  -  "

[node name="Count" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "1"

[node name="plus" type="Button" parent="VBoxContainer/HBoxContainer"]
modulate = Color(3.1229057, 3.1229057, 3.1229057, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "  +  "

[node name="Prix" type="Label" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 0.64705884, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "2"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Prix"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 3.9999962
offset_top = 1.9999999
offset_right = 44.0
offset_bottom = 42.0
grow_horizontal = 0
scale = Vector2(1.6861517, 1.5967395)
texture = ExtResource("2_v0kt3")
expand_mode = 1

[node name="BankBuyCard" type="Button" parent="VBoxContainer"]
modulate = Color(3.1229057, 3.1229057, 3.1229057, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_font_sizes/font_size = 38
text = "Acheter"

[node name="GetCard" type="Button" parent="VBoxContainer"]
modulate = Color(3.1229057, 3.1229057, 3.1229057, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 38
text = "Piocher une carte"

[node name="aide" type="Label" parent="VBoxContainer/GetCard"]
layout_mode = 0
offset_left = -67.0
offset_top = 70.0
offset_right = 395.0
offset_bottom = 104.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "vous pouvez utiliser la carte piocher diretement"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/moins" to="." method="_on_moins_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="VBoxContainer/BankBuyCard" to="." method="_on_bank_buy_card_pressed"]
